lenth menu updated and List Vehicles link added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19055,6 +19055,7 @@ img.lazyestload {
         justify-content: center !important;
         flex-direction: column;
         gap: 0.5rem;
+        padding: 1rem 0 0 0;
     }
 }
 
